<resources>
    <string name="app_name">Cryptolist</string>
    <string name="currency_code">Currency Code</string>
    <string name="select_a_color">Select a Color</string>
    <string name="enter_sell_price">Enter sell price</string>
    <string name="sell_price">Sell Price</string>
    <string name="enter_sell_quantity">Enter sell quantity</string>
    <string name="sell_quantity">Sell Quantity</string>
    <string name="buy_price">Buy Price</string>
    <string name="enter_buy_price">Enter buy price</string>
    <string name="buy_quantity">Buy Quantity</string>
    <string name="enter_buy_quantity">Enter buy quantity</string>
    <string name="save_data">Save Data</string>
    <string name="edit_column_color">Edit Column Color</string>
    <string name="color_column_desc">Choose a color from below to set as background of column!</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="selected_color">Selected Color</string>
    <string name="your_earnings">Your Earnings</string>
    <string name="earnings_details_of_selected_columns">Earnings details of selected columns</string>
    <string name="are_you_sure_you_want_delete_1_item">Are you sure you want delete items?</string>
    <string name="enter_value">Enter Value</string>
    <string name="backarrow">BackArrow</string>
    <string name="add_trade">Add Trade</string>
    <string name="buy_cryptoname">Buy CryptoName</string>
    <string name="sell_cryptoname">Sell CryptoName</string>
    <string name="trade_tracker">Trade Tracker</string>
    <string name="currencies">Currencies</string>
    <string name="total_earning">Total Earning</string>
    <string name="_00_00">$00.00</string>
    <string name="total_crypto">Total Crypto</string>
    <string name="newdataadd">NewDataAdd</string>
    <string name="add_currency">Add Currency</string>
    <string name="are_you_sure_you_want_to_exit_app">Are you sure you want to exit app?</string>
    <string name="exit">Exit</string>
    <string name="currencyHint"><![CDATA[What is your Currency\nname & code?]]></string>
    <string name="currency_name">Currency Name</string>
    <string name="currency_data_Hint"><![CDATA[Enter Price and Quantity in\nBuy & Sell ALCX]]></string>
    <string name="live_price">Live Price</string>
    <string name="search">Search</string>
    <string name="last_price_24hrs_ago">Last Updated | 24 hrs ago</string>
    <string name="please_connect_to_an_active_internet_connection">Please connect to an active internet connection</string>
    <string name="ooops_an_error_occurred">Ooops! An error occurred!</string>
    <string name="ooops_no_internet">Ooops... No Internet!</string>
    <string name="fetching_live_rates">Fetching Live Rates</string>
    <string name="refresh">refresh</string>
    <string name="home">Home</string>
    <string name="done">Done</string>
    <string name="no_trades">No trades</string>
    <string name="delete_currency">Delete Currency</string>
    <string name="delete_trade">Delete Trade</string>
    <string name="change_color">Change Color</string>
    <string name="calculations">Calculations</string>
    <string name="edit_sell_price">Edit Sell Price</string>
    <string name="enter_new_price_here">Enter new price here</string>
    <string name="new_value">New Value</string>
</resources>