<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_12sdp"
    app:cardCornerRadius="@dimen/_12sdp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/edit_sell_price"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/dialogMessage"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_11sdp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/enter_new_price_here" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/_17sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_value"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:background="@drawable/rounded_edittext_background"
                app:hintEnabled="true"
                app:boxStrokeWidth="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_19sdp"
            android:weightSum="2"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:backgroundTint="@color/buttonColor"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:padding="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="@dimen/_12ssp" />

            </RelativeLayout>


            <RelativeLayout
                android:background="@drawable/button_bg_stroke"
                android:foreground="?selectableItemBackground"
                android:id="@+id/btnOk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:padding="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
