<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_12sdp"
    app:cardCornerRadius="@dimen/_12sdp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/confirm"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/subtitleText"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_11sdp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/are_you_sure_you_want_to_exit_app" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:backgroundTint="@color/black"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:padding="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/montserrat_regular"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/btnDelete"
                android:background="@drawable/button_bg_stroke"
                android:foreground="?selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:padding="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/montserrat_regular" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
