<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:strokeWidth="0dp"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/_12sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titletext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                android:text="@string/edit_column_color"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_11sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/subtitleText"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_marginBottom="@dimen/_11sdp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_14sdp"
                android:gravity="center_horizontal"
                android:text="@string/color_column_desc"
                />

            <!--color pallet-->
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:cardElevation="3dp"
                android:layout_marginHorizontal="@dimen/_21sdp"
                app:cardCornerRadius="@dimen/_10sdp">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/colorPaletteRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </androidx.cardview.widget.CardView>
            <!--selected color-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:layout_marginTop="@dimen/_14sdp"
                android:text="@string/selected_color"
                android:fontFamily="@font/montserrat_semi_bold"
                android:layout_marginHorizontal="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_11sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="@dimen/_140sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="8dp"
                    app:cardElevation="3dp"
                    app:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:layout_width="@dimen/_140sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center_vertical">

                        <RelativeLayout
                            android:id="@+id/currentColor"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:layout_centerVertical="true"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:background="@drawable/circle"/>

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/arrow"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center_vertical" />

                        <RelativeLayout
                            android:id="@+id/newColor"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:background="@drawable/circle"/>
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_19sdp"
                android:weightSum="2"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_40sdp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg"
                    android:backgroundTint="@color/buttonColor"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/_8sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:fontFamily="@font/montserrat_regular"
                        android:textColor="@color/textColorSecondary"
                        android:textSize="@dimen/_12ssp" />

                </RelativeLayout>


                <RelativeLayout
                    android:background="?selectableItemBackground"
                    android:id="@+id/btnConfirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/_8sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm"
                        android:fontFamily="@font/montserrat_regular"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>

